# routes/course.routes.js
@@ -1,13 +1,13 @@
 const router = require('express').Router();
 const {getAllCourse, getCoursePopuler, getPopulerAll, getDetailCourse, updateIsDone, search, filter, getByEnrollment, getPremiumCourse, getFreeCourse, getAllFreePrem, rating} = require('../controllers/course.controllers');
 const {addCourse} = require('../controllers/admin.controllers');
-const {restrict, admin} = require('../middlewares/auth.middlewares');
+const {restrict, admin, isBuy} = require('../middlewares/auth.middlewares');
 const {index, create} = require('../controllers/tests/course.controller.test.js');
 
 router.get('/list', getAllCourse);
 router.get('/populer/:id', getCoursePopuler);
 router.get('/populerall', getPopulerAll);
-router.get('/details/:id', getDetailCourse);
+router.get('/details/:courseId', isBuy, getDetailCourse);
 router.post('/rating/:id', rating);
 router.post('/updateisdone/:lessonId', restrict, updateIsDone);
 router.get('/premium', getPremiumCourse);
